Fix css precedence for link underlining in tables in dark mode

--- a/app/styles/modes.scss
+++ b/app/styles/modes.scss
@@ -27,7 +27,7 @@
       }
     }
   }
-  table a {
+  table a:not(.btn) {
     text-decoration: none;
     &:hover {
       text-decoration: underline;
